buffer as unmodified which doesn't require switching to that buffer.

** New minor mode 'delete-selection-local-mode'.
This mode sets 'delete-selection-mode' buffer-locally.  This can be
useful for enabling or disabling the features of 'delete-selection-mode'
based on the state of the buffer, such as for the different states of
modal editing packages.


* Changes in Specialized Modes and Packages in Emacs 31.1

---
** Text mode

*** New commands to convert between ASCII and full-width characters.
New commands 'fullwidth-region' and 'fullwidth-word' convert ASCII
characters in region or in the word at point to the corresponding
full-width characters, which are customarily used instead of ASCII
characters in CJK texts.  For example, 'A' is converted to 'Ａ', '1' is
converted to '１', etc.  Companion commands 'halfwidth-region' and
'halfwidth-word' perform the opposite conversion.

---
** ASM mode

*** 'asm-mode-set-comment-hook' is obsolete.
You can now set `asm-comment-char' from 'asm-mode-hook' instead.

---
** Ibuffer

*** New column 'recency' in Ibuffer display.
The user option 'ibuffer-formats' configures the Ibuffer formats.  Add
'recency' to the format to display the column.

*** New value 'title' for the user option 'ibuffer-use-header-line'.
Display column titles in the header line if 'ibuffer-use-header-line' is
set to 'title'.

*** New user option 'ibuffer-human-readable-size'.
When non-nil, buffer sizes are shown in human readable format.

---
*** 'define-ibuffer-op' prompts can now be functions.
The prompts 'opstring' and 'active-opstring' can now either be strings
or functions.  This is useful when your prompts can benefit from dynamic
content.

---
** Buffer Menu

*** New user option 'Buffer-menu-human-readable-sizes'.
When non-nil, buffer sizes are shown in human readable format.  The
default is nil, which retains the old format.

** Term

*** The terminal emulator now supports auto-margins control.