@@ -473,6 +473,11 @@ useful for enabling or disabling the features of 'delete-selection-mode'
 based on the state of the buffer, such as for the different states of
 modal editing packages.
 
+** New user variable 'exchange-point-and-mark-highlight-region'.
+When set to nil, this modifies `exchange-point-and-mark' so that it doesn't
+activate mark when it is not already active.
+The default value is 't' which changes nothing to previous behavior.
+
 
 * Changes in Specialized Modes and Packages in Emacs 31.1
 
